# smp25519-rust

./: Cargo.toml  README.md
examples/: secure_udp_client.rs  secure_udp_server.rs
src/: lib.rs
