[package]
name = "smp25519"
version = "1.0.1"
edition = "2021"
authors = ["TrueBreaker <truebreaker@proton.me>"]
description = "Secure Messaging Protocol 25519"
license = "Unlicense"
repository = "https://github.com/979st/smp25519-rust"
documentation = "https://docs.rs/smp25519"
readme = "README.md"
keywords = ["sockets", "udp", "protocol", "messaging", "secure"]
categories = ["api-bindings", "network-programming"]

[dependencies]
blake3 = "1.5.5"
chacha20 = "0.9.1"
x25519-dalek = {version = "2.0.1", features = ["static_secrets", "getrandom"]}

[dev-dependencies]
base64 = "0.22.1"